# handy-online-tools

./: .gitignore  Cargo.toml  README.md  build_ci.sh  index.html  next.config.js  package.json  pnpm-lock.yaml  pubspec.yaml  rspack.config.ts  tailwind.config.js  tsconfig.json
.cargo/: config.toml
.github/workflows/: main.yml
.opencode/agents/: browser-operate.md.bak  git-end.md  image-reader.md
android/app/: build.gradle.kts
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: apps.dart  main.dart
lib/core/: app_window.dart  rust_libs.dart
lib/models/: app.dart  app_window.dart
lib/utils/: keyboard.dart
lib/widgets/: FileEntryWidget.dart  file_entry.dart  file_picker.dart  pending_file.dart
linux/: CMakeLists.txt
linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
linux/runner/: my_application.cc
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner.xcodeproj/: project.pbxproj
mobile/src/: main.rs
proto/: archiver.proto  core.proto
rust-libs/: Cargo.toml  LICENSE_MIT
rust-libs/.cargo/: config.toml
rust-libs/hol_core/: Cargo.toml  build.rs
rust-libs/hol_core/src/: lib.rs  proto.rs  setup.rs
rust-libs/hol_core/src/core/: app.rs  command.rs  mod.rs  resource.rs  result.rs
rust-libs/hol_core/src/preset_pkgs/: archiver.rs  blob.rs  mod.rs
rust-libs/hol_macro/: Cargo.toml
rust-libs/src/: bridge.rs  checksum.rs  core.rs  lib.rs
rust-libs/tests/: mod.rs
scripts/: base.py  build-proto.py  build-wasm.py  build.py  script_lib.py
src/: Desktop.tsx  main.tsx  styles.css  types.ts
src/apps/: registry.ts
src/components/: AppLauncher.tsx  FileEntry.tsx  FilePicker.tsx  OpenAsHost.tsx  PendingFile.tsx  WindowFrame.tsx
src/lib/: fileActions.ts
src/pages/: _app.tsx  checksum.module.scss  checksum.tsx  clipboard.module.scss  clipboard.tsx  file-browser.module.scss  file-browser.tsx  index.tsx  protobuf.module.scss  protobuf.tsx
src/services/: bridge.service.ts  checksum.service.ts  protobuf.service.ts  wasm-prelude.ts
src/stores/: useBlobStore.ts  useWindowsStore.ts
src/styles/: global.css
src/utils/: channel.ts  common.ts  file.ts  hook.ts  json.ts
src/widgets/: appbar.module.scss  appbar.tsx  components.module.scss  components.tsx  features.module.scss  features.tsx  file-drop.module.scss  file-drop.tsx  global.module.scss  layout.module.scss  layout.tsx  loading.module.scss  loading.tsx  main-card.module.scss  main-card.tsx  progress.module.scss  progress.tsx  seo.tsx  tab.module.scss  tab.tsx
test/: widget_test.dart
ui/: Cargo.toml
ui/src/: app_registry.rs  entry.rs  lib.rs  registry.rs
web/: Cargo.toml  index.html  manifest.json
windows/: CMakeLists.txt
(+39 files in other folders)
