[package]
name = "rust-libs"
version = "0.1.0"
authors = ["hpp2334 <hpp2334@outlook.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
num-traits = "0.2"
num-derive = "0.3"
wasm-bindgen = "0.2.63"
wasm-bindgen-futures = "0.4.34"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11.9"
serde-wasm-bindgen = "0.4"
js-sys = "0.3.61"
tokio = { version = "1.25.0", features = ["rt", "sync", "macros"] }
once_cell = "1.17.0"
md-5 = "0.10.5"
sha1 = "0.10.5"
sha2 = "0.10.6"
console_error_panic_hook = { version = "0.1.6", optional = true }
wee_alloc = { version = "0.4.5", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"

