[package]
name = "hol_core"
version = "0.1.0"
authors = ["hpp2334 <hpp2334@outlook.com>"]
edition = "2024"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.100"
console_error_panic_hook = { version = "0.1.7" }
prost = "0.14"
prost-types = "0.14"
zip = { version = "3.0.0", default-features = false, features = [
    "aes-crypto",
    "deflate",
    "deflate-flate2",
] }
getrandom = { version = "0.3.3", features = ["wasm_js"] }
hol_macro = { workspace = true }
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3.31"
wasm-bindgen-futures = "0.4.50"

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"

[build-dependencies]
prost-build = "0.14.1"
